update: 金流 API
Related work Item:

1. 讀取購物車頁面以及查詢優惠代碼使用同一隻 API
