# src/controllers/goldFlow.controller.ts
@@ -6,7 +6,6 @@ import { GoldFlowService } from '../services/goldFlow.service';
 import { IRequestBody } from '../types/handle.type';
 import {
   IPostCardRequest,
-  IPostCouponRequest,
   ICreateOrderRequest,
   IPostCheckRequest,
 } from '../viewModels/controllers/goldFlow.viewModel';
@@ -30,7 +29,8 @@ class GoldFlowController {
               "646f7e2f4802a2dbf6b3eb83",
               "646f7e2f4802a2dbf6b3eb84",
               "646f7e2f4802a2dbf6b3eb85"
-            ]
+            ],
+            "couponCode": "ugyV1E8P"
           }
         }
      * #swagger.responses[200] = {
@@ -38,61 +38,32 @@ class GoldFlowController {
           schema: {
             "statusCode": 200,
             "isSuccess": true,
-            "message": "Success",
+            "message": "成功",
             "data": {
-              "totalPrice": 28226,
+              "amt": 6210,
+              "itemDesc": "646f7e2f4802a2dbf6b3eb83,646f7e2f4802a2dbf6b3eb84,646f7e2f4802a2dbf6b3eb85",
+              "totalPrice": 7022,
               "shoppingCart": [
                 {
-                  "_id": "646b8121b65fd84dc4ab0af5",
+                  "_id": "646f7e2f4802a2dbf6b3eb83",
                   "title": "狗狗訓練入門課程",
-                  "cover": "https://thumbs.dreamstime.com/z/cute-funny-dog-stucks-her-tongue-26778597.jpg",
-                  "level": "中階課程",
-                  "time": 341312,
-                  "total": 93,
-                  "instructorName": "ffffff",
-                  "price": 7251,
-                  "discountPrice": null,
-                  "isFree": false
-                },
-                {
-                  "_id": "646b8121b65fd84dc4ab0af6",
-                  "title": "高效狗狗訓練方法",
                   "cover": "https://thumbs.dreamstime.com/z/dog-golden-retriever-jumping-autumn-leaves-autumnal-sunlight-77861618.jpg",
                   "level": "初階課程",
-                  "time": 496794,
-                  "total": 48,
-                  "instructorName": "zihyin",
-                  "price": 8155,
+                  "time": 135.6,
+                  "total": 53,
+                  "instructorName": "RubyTest",
+                  "price": 3148,
                   "discountPrice": null,
                   "isFree": false
                 }
               ],
-              "youMightLike": [
-                {
-                  "_id": "646b8121b65fd84dc4ab0b45",
-                  "title": "高效寵物旅宿訓練指南",
-                  "cover": "https://thumbs.dreamstime.com/z/mixed-breed-cat-pug-red-bow-tie-sitting-maltese-dog-fro-front-white-background-129940127.jpg",
-                  "level": "初階課程",
-                  "time": 177234,
-                  "total": 67,
-                  "instructorName": "test",
-                  "price": 7386,
-                  "discountPrice": null,
-                  "isFree": false
-                },
-                {
-                  "_id": "646b8121b65fd84dc4ab0b5b",
-                  "title": "兔兔的健康與飼養",
-                  "cover": "https://thumbs.dreamstime.com/z/dog-cat-11133177.jpg",
-                  "level": "初階課程",
-                  "time": 340664,
-                  "total": 23,
-                  "instructorName": "zihyin",
-                  "price": 7805,
-                  "discountPrice": null,
-                  "isFree": false
-                }
-              ]
+              "courseIds": "646f7e2f4802a2dbf6b3eb83,646f7e2f4802a2dbf6b3eb84,646f7e2f4802a2dbf6b3eb85",
+              "discountedPrice": 6210,
+              "couponPrice": 812,
+              "id": "23fe572cb41032895ca6bf0aae176143ee63ce97a3096ed8a357e3f8b36565d33e95845bf85a8563bf3b9e66c6ee055f",
+              "email": "AbcTest@gmail.com",
+              "timeStamp": 1685783027,
+              "merchantOrderNo": 1685783027
             }
           }
         }
@@ -107,18 +78,29 @@ class GoldFlowController {
       */
     //#endregion [ swagger說明文件 ]
     try {
-      const { courseIds } = req.body;
+      const { courseIds, couponCode } = req.body;
 
       const goldFlowService = new GoldFlowService();
-      const { courseHierarchy, youMightLike } = await goldFlowService.postCardAsync(courseIds);
+      const { courseHierarchy, youMightLike } = await goldFlowService.chenkCardCoursesAsync(
+        courseIds,
+      );
 
       if (!courseHierarchy)
         return handleResponse(res, HttpStatusCode.OK, HttpMessage.Success, {
           youMightLike,
         });
+      else if (!couponCode) {
+        delete courseHierarchy.uniqueTagNames;
+        return handleResponse(res, HttpStatusCode.OK, HttpMessage.Success, {
+          courseHierarchy,
+          youMightLike,
+        });  
+      }
+
+      const result = await goldFlowService.checkCardCouponAsync(courseHierarchy, couponCode);
 
       return handleResponse(res, HttpStatusCode.OK, HttpMessage.Success, {
-        ...courseHierarchy,
+        ...result,
         youMightLike,
       });
     } catch (err) {
@@ -126,86 +108,6 @@ class GoldFlowController {
     }
   }
   //#endregion postCard [ 讀取購物車資料 ]
-
-  //#region postCoupon [ 查詢單筆優惠卷 ]
-  /** 查詢單筆優惠卷 */
-  static async postCoupon(
-    req: IRequestBody<IPostCouponRequest>,
-    res: Response,
-    next: NextFunction,
-  ) {
-    //#region [ swagger說明文件 ]
-    /**
-     * #swagger.tags = ["GoldFlow - 金流 API"]
-     * #swagger.description = "查詢單筆優惠卷"
-     * #swagger.parameters["body"] = {
-          description: "資料格式",
-          in: "body",
-          type: "object",
-          required: true,
-          schema: {
-            "courseIds": [
-              "646e0e6ffa0eac0933c5a776",
-              "646e0e6ffa0eac0933c5a778",
-              "646e0e6ffa0eac0933c5a77e",
-              "646e0e6ffa0eac0933c5a78c",
-              "646e0e6ffa0eac0933c5a79b",
-              "646e0e6ffa0eac0933c5a79c",
-              "646e0e6ffa0eac0933c5a7ad",
-              "646e0e6ffa0eac0933c5a7ae"
-            ],
-            "couponCode": "ycks7e6q"
-          }
-        }
-     * #swagger.responses[200] = {
-          description: "成功",
-          schema: {
-            "statusCode": 200,
-            "isSuccess": true,
-            "message": "Success",
-            "data": {
-              "price": 688
-            }
-          }
-        }
-      * #swagger.responses[400] = {
-          description: "錯誤的請求",
-          schema:{
-            "success": false,
-            "statusCode": 400,
-            "message": "Failure"
-          }
-        }
-      * #swagger.responses[500] = {
-          description: "伺服器發生錯誤",
-          schema:{
-            "statusCode": 500,
-            "isSuccess": false,
-            "message": "系統發生錯誤，請聯繫系統管理員"
-          }
-        }
-      */
-    //#endregion [ swagger說明文件 ]
-    try {
-      const { courseIds, couponCode } = req.body;
-
-      const goldFlowService = new GoldFlowService();
-      const courseTabs = await goldFlowService.mergeCourseTabsAsync(courseIds);
-
-      if (!courseTabs)
-        return handleResponse(res, HttpStatusCode.BadRequest, HttpMessage.BadRequest);
-
-      const price = await goldFlowService.checkCouponCode(couponCode, courseTabs);
-
-      if (!price)
-        return handleResponse(res, HttpStatusCode.BadRequest, '輸入的優惠券代碼對此課程無效');
-
-      return handleResponse(res, HttpStatusCode.OK, HttpMessage.Success, { price });
-    } catch (err) {
-      next(err);
-    }
-  }
-  //#endregion postCoupon [ 查詢單筆優惠卷 ]
 
   //#region createOrder [ 新增訂單 ]
   /** 新增訂單 */
@@ -309,7 +211,7 @@ class GoldFlowController {
 
       const order = await goldFlowService.checkOrderAsync(courseHierarchy, couponCode);
 
-      order.id = orderIdAesEncrypt;
+      order._id = orderIdAesEncrypt;
       order.email = user.email;
       order.timeStamp = timeStamp;
       order.merchantOrderNo = timeStamp;
